--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "ssh://git@github.com/yavisht/has-key.git"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
