--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,14 +3,18 @@ on:
   push:
     branches:
       - master
+
 jobs:
-  release:
-    name: Release
+  initial:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
 
+  fanout1:
+    runs-on: ubuntu-latest
+    needs: initial
+    steps:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
@@ -22,16 +26,20 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
 
-      - name: Prep artifact for github package publishing
-        run: |
-          npm install -g json
-          json -I -f package.json -e 'this.publishConfig.registry="https://npm.pkg.github.com/"'
-
-      - name: Set Node env for GHP
+  fanout2:
+    runs-on: ubuntu-latest
+    needs: fanout1
+    steps:
+      - name: Setup Node.js for GHP
         uses: actions/setup-node@v1
         with:
           node-version: 12
           registry-url: "https://npm.pkg.github.com"
+
+      - name: Prep artifact for github package publishing
+        run: |
+          npm install -g json
+          json -I -f package.json -e 'this.publishConfig.registry="https://npm.pkg.github.com/"'
 
       - name: Publish to GHP
         env:
