--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,16 +5,12 @@ on:
       - master
 
 jobs:
-  initial:
+  npm:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
 
-  fanout1:
-    runs-on: ubuntu-latest
-    needs: initial
-    steps:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
@@ -26,10 +22,13 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
 
-  fanout2:
+  ghp:
     runs-on: ubuntu-latest
-    needs: fanout1
+    needs: npm
     steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
       - name: Setup Node.js for GHP
         uses: actions/setup-node@v1
         with:
