fix(packageRego): wrong url

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "url": "ssh://git@github.com/yavisht/has-key.git"
   },
   "publishConfig": {
-    "access": "public",
-    "registry": "https://npm.pkg.github.com/"
+    "access": "public"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
