--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,9 @@ jobs:
           json -I -f package.json -e 'this.publishConfig.registry="https://npm.pkg.github.com/"'
 
       - name: Publish to GHP
+        if: startsWith(github.ref, 'refs/tags/')
         env:
           NPM_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: git describe --tags > release.txt && cat release.txt
+        run: |
+          json -I -f package.json -e 'this.version="${{ github.ref }}"'
+          cat package.json
