--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,5 +47,5 @@ jobs:
       - name: Publish to GHP
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.GH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: npm publish
