--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           node-version: 12
           registry-url: "https://npm.pkg.github.com"
+          scope: "yavisht"
 
       - name: Prep artifact for github package publishing
         run: |
@@ -48,4 +49,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.GH_TOKEN }}
         run: npm publish
